<resources>
    <string name="app_name">PlusOne</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in </string>
    <string name="error_invalid_email">Invalid email.</string>
    <string name="error_invalid_password">Password too short</string>
    <string name="error_incorrect_password">Wrong password</string>
    <string name="error_field_required">This field is compulsory</string>
    <string name="permission_rationale">"Access to contacts is necessary to auto-fill emails."
    </string>
    <string name="title_activity_success">Success</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="sport_event">Sports Events</string>
    <string name="food">Food</string>
    <string name="party">Party</string>
    <string name="entertainment">Entertainement</string>
    <string name="learning">Learning</string>
    <string name="others">Others</string>
    <string name="prompt_search">Search...</string>
    <string name="event">Event Name </string>
    <string name="description">Description</string>
    <string name="date">Date </string>
    <string name="timeEnd">Finishes at</string>
    <string name="timeStart">Starts at</string>
    <string name="location"> Location</string>
    <string name="type">Type</string>
    <string name="Subscribe">toggle subscription</string>
    <string name="Unsubscribe">UnSubscribe</string>
    <string name="addAddress">Add Address</string>
    <string name="searchMap">Search</string>

    <string-array name="arrayEventTypes">
        <item>Sports Event</item>
        <item>Food</item>
        <item>Party</item>
        <item>Entertainment</item>
        <item>Learning</item>
        <item>Others</item>
    </string-array>

    <string name="PeopleNeeded">People needed</string>
    <string name="Create">Create</string>
    <string name="NumberPeople">People subscribed</string>
    <string name="editTextSearch">Search</string>

    <string name="editTextSortTime">Time</string>
    <string name="editTextSortDistance">Distance</string>
    <string name="editTextFilter">Events after</string>


    <string name="log_out">Log out</string>
    <string name="buttonEventsSubscribed">Events Subscribed</string>
    <string name="buttonViewNumberPeople">People Subscribed</string>
    <string name="settingsChangeButton">Change</string>
    <string name="textViewGender">Gender</string>
    <string name="editTextSettingsPassword"></string>
    <string name="editTextAjustesEmail"></string>
    <string name="editTextSettingsLastName"></string>
    <string name="editTextSettingsName"></string>
    <string name="title_activity_maps">Map</string>
    <string name="SeeMap">See on map</string>
    <string name="title_activity_event_list">EventList</string>
    <string name="large_text">

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="search_title">Search...</string>
    <string name="search_hint">Birras...</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="typeMessage"></string>
    <string name="Chat">Chat</string>

    <!-- Chat -->
    <string name="action_leave">Leave</string>
    <string name="action_send">Send</string>
    <string name="prompt_message">Message</string>

    <string name="connect">Connected</string>
    <string name="disconnect">Disconnected, Please check your internet connection</string>
    <string name="error_connect">Failed to connect</string>

    <!-- messages -->
    <string name="message_welcome">Welcome to Socket.IO Chat –</string>
    <plurals name="message_participants">
        <item quantity="one">there\'s %d participant</item>
        <item quantity="other">there are %d participants</item>
    </plurals>
    <string name="message_user_joined">%s joined</string>
    <string name="message_user_left">%s left</string>
    <string name="user_action_typing">is typing</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="databaseToggle">Local Database</string>


</resources>


